# LocalWisp

./: .gitignore  LICENSE  Launch_LocalWisp.bat  README.md  main.py  pyproject.toml  requirements.txt  setup_models.py
src/: listener.py  recorder.py  transcriber.py  vad.py
