[project]
name = "LocalWisp"
version = "1.0.0"
authors = [
    {name = "André Trevisol Trindade"}
]
description = "CPU-optimized offline voice dictation assistant for Windows (Ref: Ryzen 5700G)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["whisper", "offline", "dication", "cpu-optimized", "windows"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
